--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
 body {
+  font-family: 'Work Sans', sans-serif; 
+  background-color: #334257;
+  color: white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+i {
+  cursor: pointer;
+}
+
+.btn-grad {
+  font-family: 'Work Sans', sans-serif;
+  background-image: linear-gradient(
+    to right,
+    #02aab0 0%,
+    #00cdac 51%,
+    #02aab0 100%
+  );
+  
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border:none;
+  border-radius: 20px;
+  color: #212121;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.forminput {
+  border-radius: 20px;
+  background-color: #e7e7e7;
+  border: none;
+  font-family: Work Sans;
+}
+
+.bluecolor {
+  color: #02AAB0;
+  font-family: work sans;
+  font-weight: bold;
+
+}
+
+.greycolor {
+  color: #dfdfdf
 }
